--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ android {
         }
     }
 }
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 dependencies {
     def room_version = "2.2.3"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -33,7 +34,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.room:room-runtime:$room_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
+    kapt "androidx.room:room-compiler:2.0.0-alpha1"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 }
