--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".GlobalSearchActivity"
+        <activity android:name=".GLobalSearch.GlobalSearchActivity"
+                  android:theme="@style/AppTheme.NoActionBar"
       >
         </activity>
         <activity
